<resources>
    <string name="app_name">Controle Financeiro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_conta">ContaActivity</string>

    <string name="lista_vazia">Lista vazia</string>


    <string name="descricao">Descrição:</string>
    <string name="saldo_inicial">Saldo inicial:</string>
    <string name="saldo_atual">Saldo atual:</string>
    <string name="saldo_atual_total">Saldo atual total:</string>


    <string name="conta_adicionada">Conta adicionada</string>
    <string name="conta_alterada">Conta alterada</string>

    <string name="nova_transacao">Nova transação</string>
    <string name="transacao_adicionada">Transação adicionada</string>
    <string name="title_activity_transacao">TransacaoActivity</string>

    <string name="titulo_transacao">Transação</string>
    <string name="tipoTransacao">Tipo de transação:</string>

    <string name="conta_da_transacao">Conta da transação:</string>
    <string name="credito">Crédito</string>
    <string name="debito">Débito</string>
    <string name="natureza_da_operacao">Natureza da operação:</string>

    <string name="valor">Valor:</string>
    <string name="repeticao">Repetição:</string>
    <string name="unica">Única</string>
    <string name="repete">Repete</string>
    <string name="data">Data:</string>
    <string name="data_inicial">Data inicial:</string>
    <string name="data_final">Data final:</string>
    <string name="alterar_data">Alterar data</string>
    <string name="periodicidade">Periodicidade:</string>
    <string name="quantidade_de_repeticoes">Quantidade de repetições:</string>
    <string name="preencher_todos_campos_corretamente">Por favor preencher todos os campos corretamente</string>
    <string name="title_activity_extrato">ExtratoActivity</string>


    <string name="tipo_extrato">Pesquisar extrato de transação por:</string>
    <string name="ExtratoPorPeriodo">Período</string>
    <string name="ExtratoPorNaturezaTransacao">Natureza</string>
    <string name="ExtratoPorTipoTransacao">Tipo</string>
    <string name="gerar_extrato_da_conta">Gerar extrato</string>
    <string name="pesquisar">Pesquisar</string>


</resources>
