<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ExtratoActivity"
    tools:showIn="@layout/activity_extrato">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headerTipoExtrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_extrato"
            />

        <RadioGroup
            android:id="@+id/rdGrpTipoExtrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/rdBtnTipoExtratoPorPeriodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ExtratoPorPeriodo"/>

            <RadioButton
                android:id="@+id/rdBtnTipoExtratoPorNaturezaTransacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ExtratoPorNaturezaTransacao"/>

            <RadioButton
                android:id="@+id/rdBtnTipoExtratoPorTipoTransacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ExtratoPorTipoTransacao"/>

        </RadioGroup>




        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>