<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContaActivity"
    tools:showIn="@layout/activity_conta">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/imgConta"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/get_money"/>

        <TextView
            android:id="@+id/txtDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao">
        </TextView>
        <EditText
            android:id="@+id/editTextDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>


        <TextView
            android:id="@+id/txtSaldoinicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo_inicial">
        </TextView>

        <EditText
            android:id="@+id/editTextSaldoInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"></EditText>


        <TextView
            android:id="@+id/txtSaldoAtual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo_atual">
        </TextView>

        <EditText
            android:id="@+id/editTextSaldoAtual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"></EditText>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>