<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/linhaExtrato">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:elevation="4dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/lytMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/txtDescricao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descricao"
                    android:layout_alignParentTop="true"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/txtTipoTransacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txtDescricao"
                    android:text="@string/tipoTransacao"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="5dp"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/txtNatureza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/natureza_da_operacao"
                    android:layout_toRightOf="@+id/txtTipoTransacao"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/txtValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100,00"
                    android:layout_below="@+id/txtDescricao"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/txtDataLancamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10/12/2018"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/txtValor"
                    android:layout_alignTop="@+id/txtValor"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>